public/style.css
/* A debug class, used to separate components graphically during development */

a:link {
  color: steelblue;
  text-decoration: none;
}

a:visited {
  color: steelblue;
  text-decoration: none;
}

.summary {
  padding-top: 20px;
  margin-left: 20px;
  font-size: 16px;
}

.summary th {
  padding: 12px 12px 12px 12px;
}

.summary button {
  font-family: inherit;
  height: 50px;
  width: 150px;
  background-color: rgba(70, 131, 180, 0.331);
  color: black;
  margin-left: 1px;
  border-radius: 25px;
  font-size: 14px;
  font-weight: bold;
  margin-left: 25vw;
}

.right {
  text-align: right;
}

.qt {
  text-align: right;
}

.flexParent {
  font-family: "Trebuchet MS", sans-serif;
  display: flex;
  flex-direction: row;
}

.sideBar {
  font-family: "Trebuchet MS", sans-serif;
  font-size: 14px;
  margin: 20px;
  height: 100%;
  width: 20%;
}

.sideBar button {
  height: 25px;
  width: 25px;
  font-size: 16px;
  border-radius: 5px;
}
#addGuestLeft {
  margin-right: 5px;
}

#addGuestRight {
  margin-left: 5px;
}
#nrGuests {
  font-size: 25px;
}

.guestView {
  border-bottom: solid steelblue;
  padding-bottom: 5px;
}

.noData {
  margin: 20px;
}

.mainContent {
  font-size: 10px;
  height: 100%;
  width: 75%;
}

.entry {
  width: 100px;
}

.searchForm {
  font-family: inherit;
  margin: 20px;
  height: 100%;
}

.searchForm input {
  font-family: inherit;
  width: 300px;
  height: 50px;
  border-radius: 10px;
  font-size: 20px;
  margin-right: 10px;
}

.searchForm select {
  font-family: inherit;
  width: 150px;
  height: 50px;
  border-radius: 10px;
  font-size: 20px;
  margin-right: 10px;
  color: rgba(0, 0, 0, 0.632);
  background-color: rgba(70, 131, 180, 0.331);
}

.searchForm button {
  font-family: inherit;
  height: 50px;
  width: 150px;
  background-color: rgba(70, 131, 180, 0.331);
  color: black;
  margin-left: 1px;
  border-radius: 25px;
  font-size: 14px;
  font-weight: bold;
}

.searchResult {
  text-align: center;
  overflow: hidden;
  display: inline-block;
  width: 200px;
  height: 150px;
  margin: 10px;
  border: 2px solid steelblue;
  border-radius: 10px;
  padding: 5px;
  vertical-align: text-top;
  font-size: 14px;
  font-weight: bold;
}

.searchResult img {
  border-radius: 100%;
  width: 100px;
  height: 100px;
  margin-bottom: 10px;
}

.detailsView {
  text-align: center;
  display: flex;
  font-size: 14px;
  margin-left: 20px;
}

.detailsView button {
  font-family: inherit;
  height: 50px;
  width: 150px;
  background-color: rgba(70, 131, 180, 0.331);
  color: black;
  margin-left: 1px;
  border-radius: 25px;
  font-size: 14px;
  font-weight: bold;
}

.dishInfo {
  text-align: left;
  margin: 10px;
}

.detailsTitle {
  font-weight: bold;
  color: black;
  text-align: left;
  font-size: 16px;
  margin-top: 10px;
}

.instructions {
  font-weight: normal;
  width: 300px;
  text-align: left;
  font-size: 12px;
  margin-top: 10px;
  margin-bottom: 10px;
}

.ingredients {
  font-size: 12px;

  border-radius: 25px;
}
.hidden {
  visibility: hidden;
  display: none;
}

.login {
  width: 400px;
  height: 700px;
  font-size: 35px;
  color: tomato;
  background-color: aliceblue;

  border: 2px solid black;
  border-radius: 10px;
  text-align: center;

  display: inline-block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  margin: auto;
}

.login input {
  text-align: center;
  margin-top: 10%;
  height: 5%;
  width: 70%;
  font-size: 80%;
  border: none;
  border-bottom: 3px solid rgba(255, 99, 71, 0.434);
  background-color: inherit;
  color: tomato;
}

.login button {
  width: 25%;
  font-size: 20px;
  border-radius: 20px;
  margin-top: 10%;
  margin-right: 5px;
  background-color: aliceblue;
  border: 2px solid grey;
}
.login button:hover {
  background-color: rgb(213, 235, 255);
  border-color: black;
}

.loginProperties {
  margin-top: 10%;
}

.binder {
  margin-top: 10%;
  font-size: 100px;
  color: tomato;
  text-shadow: 3px 3px grey;
}

.forgotPassword {
  margin-top: 5%;
  font-size: 15px;
  font-weight: bold;
  width: auto;
}
/*
.forgotPassword:hover {
  text-decoration: underline;
  cursor: pointer;
}
Remove comment when functionality exists
*/

.notRegistered {
  margin-top: 30%;
  font-size: 15px;
  font-weight: bold;
  width: auto;
}

.notRegistered:hover {
  text-decoration: underline;
  cursor: pointer;
}

.profileInfo {
  width: 400px;
  height: 700px;
  font-size: 30px;
  color: rgba(0, 0, 0, 0.715);
  background-color: aliceblue;

  border: 2px solid black;
  border-radius: 10px;
  text-align: center;

  display: inline-block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  margin: auto;
}

.profileInfoHeader {
  color: tomato;
}

.profileInfo button {
  width: 25%;
  font-size: 20px;
  border-radius: 20px;
  margin-top: 10%;
  margin-right: 5px;
  background-color: aliceblue;
  border: 2px solid grey;
}
.profileInfo button:hover {
  background-color: rgb(213, 235, 255);
  border-color: black;
}

.table {
  font-size: 20px;
  table-layout: fixed;
  width: 100%;
  border-collapse: collapse;
  border: none;
  text-align: center;
  overflow: scroll;
}

.table tbody {
  font-size: 25px;
}

.table tbody img {
  border-radius: 50%;
  width: 7.5%;
  height: 7.5%;
  margin-left: 5px;
}

.table button {
  border-radius: 50%;
  border-style: none;
  width: 7.5%;
  height: 7.5%;
  margin-left: 5px;
  background-color: white;
  transition: background-color 100ms ease-out 100ms;
}
.table button:hover {
  background-color: tomato;
  color: white;
}

.tablehead {
  color: black;
  font-size: 30px;
  border: none;
}

.tableContainer {
  width: 100%;
  height: 350px;
  font-size: 10px;
  overflow: scroll;
}

::-webkit-scrollbar {
  width: 12px;
}

::-webkit-scrollbar-track {
  display: none;
}

.create {
  width: 400px;
  height: 700px;
  font-size: 35px;
  text-align: center;

  display: inline-block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  background-color: aliceblue;
  border: 2px solid black;
  border-radius: 10px;

  color: tomato;

  margin: auto;
}

.create input {
  text-align: center;
  margin-top: 10%;
  height: 5%;
  width: 70%;
  font-size: 80%;
  border: none;
  border-bottom: 3px solid rgba(255, 99, 71, 0.434);
  background-color: inherit;
  color: tomato;
}

.create button {
  width: 25%;
  font-size: 20px;
  border-radius: 20px;
  margin-top: 10%;
  margin-right: 5px;
  background-color: aliceblue;
  border: 2px solid grey;
}

.create button:hover {
  background-color: rgb(213, 235, 255);
  border-color: black;
}

.createName {
  height: 50px;
  width: 150px;
  background-color: rgba(2, 2, 2, 0.331);
  color: black;
  margin-left: 1px;
  border-radius: 25px;
  font-size: 20px;
  font-weight: bold;
}

.swipe {
  width: 400px;
  height: 700px;
  font-size: 20px;
  color: tomato;
  background-color: aliceblue;

  border: 2px solid black;
  border-radius: 10px;
  text-align: center;

  display: inline-block;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;

  margin: auto;
}

.swipe button {
  width: 25%;
  font-size: 20px;
  border-style: none;
  margin-top: 10%;
  margin-right: 5px;
  background-color: aliceblue;
  border: 2px solid grey;
  margin-left: -60%;
  border-radius: 20px;
}

.swipe button:hover {
  background-color: rgb(213, 235, 255);
  border-color: black;
}

.swipeTitle {
  margin-top: 10%;
  font-size: 30px;
  color: tomato;
}

.bookCover img {
  margin-top: 20%;
  width: 50%;
  height: 50%;
  border-radius: 10px;
}
.like {
  width: 75px;
  height: 75px;
  display: flex;
  bottom: 50px;
  left: 300px;
  position: absolute;
}
.like:hover {
  transform: scale(1.2);
}

.dislike {
  width: 75px;
  height: 75px;
  display: flex;
  bottom: 50px;
  left: 25px;
  position: absolute;
}
.dislike:hover {
  transform: scale(1.2);
}
.img {
  position: relative;
  top: 5px;
}

@media only screen and (max-width: 400px) {
  .flexParent {
    flex-direction: column;
  }

  .login {
    display: inline-block;
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;

    color: tomato;

    margin: auto;
    width: 90vw;
    height: 90vh;
    font-size: 24px;
    border: 2px solid black;
    text-align: center;
  }
}

